# analisis-mifel

./: .RData  .Rhistory  R.R  analisis - Juan Alvaro Díaz Raimond Kedilhac.Rmd  analisis - Juan Alvaro Díaz Raimond Kedilhac.ipynb  macro_analisis.Rmd  macro_analisis.ipynb  pyproject.toml
.ipynb_checkpoints/: analisis - Juan Alvaro Díaz Raimond Kedilhac-checkpoint.ipynb  macro_analisis-checkpoint.ipynb
data/: consumo.csv  igae.csv  inversion.csv  series.csv
