[project]
name = "mifel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "inegipy>=1.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "utilsforecast>=0.2.15",
]
